modifier le titre de la page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <section class="section-first">
         <div class="text-content">
-            <h1>HANDZ</h1>
+            <h1>LEGS</h1>
             <h2>Le reseau social le plus grand du monde</h2>
         </div>
 
